# miniature

./: Cargo.toml  LICENSE  Makefile  run.sh  rust-toolchain.toml
bootloader-efi/: Cargo.toml
bootloader-efi/src/: acpi.rs  context.rs  framebuffer.rs  fs.rs  global_alloc.rs  kernel.rs  main.rs  panic.rs  print_panic.rs
bootloader-efi/src/device/: mod.rs  partition.rs  retrieve.rs
bootloader-efi/src/logger/: mod.rs  writer.rs
bootloader-efi/src/mem/: frame_allocator.rs  memory_descriptor.rs  mod.rs  page_allocator.rs  runtime_map.rs  tracked_mapper.rs
bootloader-efi/src/sync/: upsafe_cell.rs
bootstrap/: Cargo.toml  build.rs
bootstrap/.cargo/: config.toml
bootstrap/src/: main.rs
build-image/: Cargo.toml
build-image/src/: main.rs
kernel/: Cargo.toml  build.rs  x86_64-myos.json
kernel/.cargo/: config.toml
kernel/src/: cpu.rs  cpuid.rs  framebuffer.rs  gdt.rs  interrupt.rs  interrupt_macro.rs  ipi.rs  kernel_arg.rs  kernel_entry.asm  linker.ld  main.rs  panic.rs  syscall.rs
kernel/src/acpi/: ap_startup.rs  apic.rs  io_apic.rs  lapic.rs  local_apic.rs  mod.rs
kernel/src/arch_spec/: cpuid.rs  mod.rs  msr.rs
kernel/src/asm/: trampoline.asm
kernel/src/common/: int_like.rs  mod.rs
kernel/src/context/: list.rs  mod.rs  signal.rs  status.rs  switch.rs
kernel/src/device/: com.rs  mod.rs  port.rs  qemu.rs  uart.rs
kernel/src/fs/: mod.rs
kernel/src/logger/: mod.rs
kernel/src/mem/: aligned_box.rs  frame_allocator.rs  heap.rs  load_elf.rs  mod.rs  unique.rs  user_addr_space.rs  user_buffer.rs
kernel/src/sync/: mod.rs
kernel/src/syscall_module/: flag.rs  mod.rs
libvdso/: Cargo.toml
libvdso/src/: error.rs  flag.rs  lib.rs  macro.rs  syscall.rs  syscall_number.rs
shared/: Cargo.toml
shared/src/: arg.rs  framebuffer.rs  framebuffer_writer.rs  lib.rs  print_panic.rs  uni_processor.rs
