[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"
authors = ["StageGuard <beamiscool@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}

uefi = { version = "0.26.0", features = ["logger"]}
x86_64 = "0.14.11"
xmas-elf = "0.9.1"
acpi = { version = "5.0.0", default-features = false, features = []}

log = "0.4.20"
bitflags = "2.4.2"
noto-sans-mono-bitmap = { version = "0.2.0", default-features = false, features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials"
] }

spin = "0.9.8"
buddy-alloc = "0.5.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }