[package]
name = "build-image"
version = "0.1.0"
edition = "2021"
authors = ["StageGuard <beamiscool@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fatfs = { version = "0.3.4", default-features = false, features = ["std", "alloc"] }
gpt = { version = "3.0.0" }
tempfile = "3.3.0"
log = "0.4.20"