[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["StageGuard <beamiscool@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
x86_64 = { version = "0.14.7", default-features = false, features = [
    "instructions",
    "inline_asm",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"