[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["StageGuard <beamiscool@qq.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}
libvdso = { path = "../libvdso" }
log = "0.4.20"
x86_64 = { version = "0.14.7", default-features = false, features = [
    "instructions",
    "inline_asm",
    "step_trait"
] }
uart_16550 = "0.2.18"
pc-keyboard = "0.7.0"
raw-cpuid = "10.2.0"

noto-sans-mono-bitmap = { version = "0.2.0", default-features = false, features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials"
] }

bitflags = "2.4.2"
spin = "0.9.8"
spinning_top = { version = "0.3", features = ["arc_lock"] }
buddy-alloc = "0.5.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
xmas-elf = "0.9.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"