[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["StageGuard <beamiscool@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shared"

[dependencies]
noto-sans-mono-bitmap = { version = "0.2.0", default-features = false, features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials"
] }

bitflags = "2.4.2"